# medatarun

./: .editorconfig  .gitignore  AGENTS.md  CHANGELOG.md  DATABASE_MIGRATION.md  PLAN_DATABASE_TESTING.md  README.md  build.gradle.kts  gradle.properties  plan_pbkeys.md  settings.gradle.kts
.github/workflows/: documentation-to-github-pages.yml  release.yml
app/: .gitignore  build.gradle.kts
docs/: TestModels.md  build_run.md  catalog.csv  install.md  quickstart.md
documentation/: README.md  docusaurus.config.ts  package.json  pnpm-lock.yaml
documentation/blog/: authors.yml  tags.yml
documentation/docs/: intro.md  intro.mdx  overview.md  quickstart.md
extensions/config/: build.gradle.kts
extensions/data-md-file/: build.gradle.kts
extensions/db/: README.md  build.gradle.kts
extensions/frictionlessdata/: README.md  (+1 more)
gradle/: libs.versions.toml
plans/: plan_pbkeys.md  plan_refresh_token.md  plan_test_quality.md
schemas/: medatarun-model-1.0.json  medatarun-model-1.1.json  medatarun-model-2.0.json  medatarun-model-3.0.json
tools/database-baseline/: .gitignore  README.md  generate_module_init_sql.py  pyproject.toml
tools/database-baseline/src/database_baseline/: __main__.py  generate_module_init_sql.py  generate_postgresql.py  generate_sqlite.py  module_specs.py
tools/database-baseline/src/database_baseline/utils/: sqlfluff_formatter.py  strip_simple_identifier_quotes.py
tools/database-baseline/tests/utils/: test_strip_simple_identifier_quotes.py
tools/testing-e2e/: .gitignore  README.md  pyproject.toml
tools/testing-e2e/src/testing_e2e/: __init__.py  __main__.py  action_transports.py  api.py  application.py  auth_client.py  cli.py  distribution_resolver.py  distribution_unpacker.py  run_config.py  scenario.py  test_environment.py  transport.py
tools/testing-e2e/tests/: conftest.py  test_admin_bootstrap.py  test_bootstrap_consumed.py  test_bootstrap_create_admin.py  test_bootstrap_invalid_secret.py  test_gradle_unit_tests.py  test_smoke.py  test_user_create.py
tools/ui-update-action-registry/: pyproject.toml
tools/ui-update-action-registry/src/: ui_update_action_registry.py
ui/: .gitignore  .prettierignore  README.md  build.gradle.kts  current-translations-progress.csv  eslint.config.js  index.html  login.html  package.json  pnpm-lock.yaml  tsconfig.app.json  vite.config.ts
(+2377 files in other folders)
