[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "database-baseline"
version = "0.1.0"
description = "Generate module init SQL scripts from a reference Medatarun SQLite database"
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[project.scripts]
database-baseline = "database_baseline.__main__:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]
