[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "testing-e2e"
version = "0.1.0"
description = "Automation tests for Medatarun"
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[project.scripts]
testing-release = "testing_e2e.__main__:main"

[project.optional-dependencies]
test = ["pytest>=8", "testcontainers>=4"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
