[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "testing-e2e"
version = "0.1.0"
description = "Automation tests for Medatarun"
readme = "README.md"
requires-python = ">=3.11"
dependencies = ["pytest>=9.0.3", "testcontainers>=4"]

[project.scripts]
tests = "testing_e2e.__main__:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
log_cli=true
log_cli_level="INFO"
log_cli_format = "%(asctime)s %(levelname)s %(name)s - %(message)s"